# FEMPolytrope

./: .gitignore  Readme.md  meson.build  mk
.cache/clangd/index/: coeff.cpp.B37DC93B5FBD5C38.idx  coeff.h.B8E86579BF4414FC.idx  io.cpp.BF21E35F55B375C1.idx  io.h.BBA2B9E416EE0518.idx  laneEmden.cpp.85AE86D852DDD66D.idx  mfemUtils.cpp.28B23453275664B9.idx  mfemUtils.h.7D638CA0612DE282.idx
Notebooks/: CompareNonLinearLaneEmden.ipynb
src/: meson.build
src/coeff/: coeff.cpp  coeff.h  meson.build
src/solver/: laneEmden.cpp  meson.build
src/utils/: io.cpp  io.h  meson.build  mfemUtils.cpp  mfemUtils.h
